--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
             <nav>
                 <ul id="nav-menu">
                     <li><a href="#home" class="active">Home</a></li>
-                    <li><a href="#saved-properties">Saved Properties</a></li>
                     <li><a href="#city-data">City Data</a></li>
                     <li><a href="#favorites">Favorites</a></li>
                 </ul>
@@ -38,7 +37,7 @@
                 <form>
                     <label for="search-city">Search:</label>
                     <div class="form-row">
-                        <input id="search-city" class="form-control" name="city" value="Orlando"></input>
+                        <input id="search-city" class="form-control" name="city" placeholder="Orlando"></input>
                         <!-- font-awesome magnifying glass -->
                         <button id="search-button" class="btn btn-primary" type="submit"><i class="fas fa-search"></i></button>
                     </div>
@@ -73,5 +72,6 @@
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+<script src="./assets/js/script.js"></script>
 </body>
 </html>
