--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Real Estate Near Me</title>
+    <title>Meal-Time Roulette</title>
     <link href="./assets/style.css" type="text/css" rel="stylesheet" />
     <script scr="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.4/jquery.min.js"></script>
     <script src="https://kit.fontawesome.com/df87f724a0.js" crossorigin="anonymous"></script>
