--- a/index.html
+++ b/index.html
@@ -8,43 +8,40 @@
     <link href="./assets/style.css" type="text/css" rel="stylesheet" />
     <script scr="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.4/jquery.min.js"></script>
     <script src="https://kit.fontawesome.com/df87f724a0.js" crossorigin="anonymous"></script>
-     
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 </head>
 
 <body>
     <main>
         <!--begin Header/Nav-->
         <header>
-            <div class="flex container">
+            <div class="container">
                 <h1>Meal Time Roulette</h1>
-                <p>Lets play a game of change for meal time madness!</p>
+                <p>Lets play a game of chance for meal time madness!</p>
             </div>
             <nav>
                 <ul id="nav-menu">
                     <li><a href="#saved-meals">Saved Meals</a></li>
-                    <li><a href="#saved-drinks">City Data</a></li>
+                    <li><a href="#saved-drinks">Saved Drink</a></li>
                 </ul>
             </nav>
         </header>
         <!--end header/nav-->
 
-        <section class="hero">
-
-            <div class="container">
-                <div class="row text-center">
+        <section class="hero container-fluid">
+            <div class="row">
+                <div class="text-center col-6">
                     <h2>Get a random meal by clicking below
                     <button class="button-primary" id="get-meal">Get a Meal Recipe</button>
                 </div>
-                <div id="meal" class="row meal"></div>
-            </div>
-
-            <div class="container">
-                <div class="row text-center">
+                <div id="meal" class="meal"></div>
+            
+                <div class="text-center col-6">
                     <h2>Get a random drink by clicking below
                     <button class="button-primary" id="get-drink">Get a Drink Recipe</button>
                 </div>
-                <div id="drink" class="row drink"></div>
-            </div> 
+                <div id="drink" class="drink"></div>
+            </div>
         </section>
 
 
