--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                   <!-- Column 1: Meal Recipes -->
                   <h2 id="meal-title">Spin For Your Random Meal</h2>
                   <hr>
-                <button id="meal-btn">Start Meal Search</button>
+                <button id="meal-btn" class="bulma-control-mixin">Start Meal Search</button>
                 <div id="meal" class="card-body">
                     <!-- Insert meal random meal here-->
                 </div>
@@ -56,7 +56,7 @@
                   <!--Column 2: Drink Recipes -->
                   <h2 id="drink-title">Spin For Your Random Drink</h2>
                   <hr>
-                <button id="drink-btn">Start Drink Search</button>
+                <button id="drink-btn" class="button-control-mixin">Start Drink Search</button>
                 <div id="drink" class="card-body">
                     <!-- Insert meal random drink here-->
                 </div>
