--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                   <!--Column 2: Drink Recipes -->
                   <h2 id="drink-title">Spin For Your Random Drink</h2>
                   <hr>
-                <button id="drink-btn" class="button-control-mixin">Start Drink Search</button>
+                <button id="drink-btn" class="bulma-control-mixin">Start Drink Search</button>
                 <div id="drink" class="card-body">
                     <!-- Insert meal random drink here-->
                 </div>
