Changed spin to click

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <header>
             <div class="flex-container">
                 <h1>Meal Time Roulette</h1>
-                <p>Take a chance and spin for a random meal and/or drink recipe!</p>
+                <p>Take a chance for a random meal and/or drink recipe!</p>
                 <hr>
             </div>
 
@@ -40,7 +40,7 @@
     <!--Meal Column-->
                 <div class="column" id="meals-column">
                   <!-- Column 1: Meal Recipes -->
-                  <h2 id="meal-title">Spin For Your Random Meal</h2>
+                  <h2 id="meal-title">Click For Your Random Meal</h2>
                   <hr>
                 <button id="meal-btn" class="bulma-control-mixin">Start Meal Search</button>
                 <div id="meal" class="card-body">
@@ -54,7 +54,7 @@
     <!--Drinks Column-->            
                 <div class="column" id="drinks-column">
                   <!--Column 2: Drink Recipes -->
-                  <h2 id="drink-title">Spin For Your Random Drink</h2>
+                  <h2 id="drink-title">Click For Your Random Drink</h2>
                   <hr>
                 <button id="drink-btn" class="bulma-control-mixin">Start Drink Search</button>
                 <div id="drink" class="card-body">
