--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Meal-Time Roulette</title>
     <link href="./assets/style.css" type="text/css" rel="stylesheet" />
+   <link [if (IE 6)|(IE 8)]> <style type=”text/css”> #wrap { display: table; height: 100%; } </style> <![endif]>
     <script scr="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.4/jquery.min.js"></script>
     <script src="https://kit.fontawesome.com/df87f724a0.js" crossorigin="anonymous"></script>
     <!--Bulma CSS CDN-->
