--- a/index.html
+++ b/index.html
@@ -6,11 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Meal-Time Roulette</title>
     <link href="./assets/style.css" type="text/css" rel="stylesheet" />
-   <link [if (IE 6)|(IE 8)]> <style type=”text/css”> #wrap { display: table; height: 100%; } </style> <![endif]>
+    <link [if (IE 6)|(IE 8)]> <style type=”text/css”> #wrap { display: table; height: 100%; } </style> <![endif]>
     <script scr="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.4/jquery.min.js"></script>
     <script src="https://kit.fontawesome.com/df87f724a0.js" crossorigin="anonymous"></script>
-    <!--Bulma CSS CDN-->
-    <link rel = "stylesheet" href = "https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.1/css/bulma.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">    
      
 </head>
 
