--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             </section>
     <!--footer-->        
 
-        <footer class="footer">
+        <footer id="foot" class="footer margin">
             <div class="content has-text-centered">
                 <p><strong>Meal Time Roulette</strong>&copy 2022 by Persistent-Pirates, UCF Coding Boot Camp</p>
             </div>
